[workspace]
members = [
    "bin/client",
    "bin/daemon",
    "crates/agent-lib",
    "xtask",
    "xcasper", # container for nctl-related functionality
]

[workspace.dependencies]
agent-lib = { path = "../../crates/agent-lib" }

casper-types = { git = "http://github.com/casper-network/casper-node", branch = "dev" }
casper-node = { git = "http://github.com/casper-network/casper-node", branch = "dev" }
casper-client = { git = "http://github.com/casper-ecosystem/casper-client-rs", branch = "dev" }

const_format = "0.2"
anyhow = "1"
async-process = "1.5.0"
duct = "0.13"
futures = "0.3"
libc = "0.2"
rocksdb = "0.20.1"
reqwest = "0.11"
warp = "0.3"
structopt = "0.3.26"
tarpc = { version = "0.31.0", features = ["full"]}
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.23" }
tokio-util = { version = "0.7" }
tokio-serde = { version = "0.8"}
serde = { version = "1", features = ["derive"]}
sudo = "0.6"
rustls = { version = "0.20", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6"
rustls-pemfile = "1"
pin-project = "1"
zstd = "0.12"

# this section should not be checked in with items uncommented - it serves as a local patch only

[patch."http://github.com/casper-network/casper-node"]
casper-types = { path = "../casper-node/types" }
casper-node = { path = "../casper-node/node" }
