[workspace]
members = [
    "bin/client",
    "bin/daemon",
    "crates/agent-lib",
    "xtask",
    "xcasper", # container for nctl-like functionality
]

exclude = [
    "xcasper-staging",
]

[workspace.dependencies]
agent-lib = { path = "../../crates/agent-lib" }

casper-types = { git = "http://github.com/casper-network/casper-node", branch = "feat-2.0" }
casper-node = { git = "http://github.com/casper-network/casper-node", branch = "feat-2.0" }
casper-client = { git = "http://github.com/casper-ecosystem/casper-client-rs", branch = "dev" }

async-mutex = "1.4"
blake3 = "1"
const_format = "0.2"
anyhow = "1"
envsubst = "0.2"
async-process = "1.5.0"
duct = "0.13"
futures = "0.3"
libc = "0.2"
reqwest = "0.11"
warp = "0.3"
structopt = "0.3.26"
tarpc = { version = "0.33", features = ["full"]}
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.24" }
tokio-util = { version = "0.7" }
tokio-serde = { version = "0.8"}
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.9.21"
toml = "0.7"
sudo = "0.6"
regex = "1"
rustls = { version = "0.21", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6"
rustls-pemfile = "1"
pin-project = "1"
walkdir = "2"
zstd = "0.12"


# this section should not be checked in with items uncommented - it serves as a local patch only

# [patch."http://github.com/casper-network/casper-node"]
# casper-types = { path = "../casper-node/types" }
# casper-node = { path = "../casper-node/node" }

# [patch."http://github.com/casper-network/casper-node"]
# casper-types = { git = "https://github.com/casper-network/casper-node", branch = "feat-2.0" }
# casper-node = { git = "https://github.com/casper-network/casper-node", branch = "feat-2.0" }
