[package]
name = "xcasper"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-node = { workspace = true }
casper-types = { workspace = true }

const_format = { workspace = true }
envsubst = { workspace = true }
anyhow = { workspace = true }
duct = { workspace = true }
structopt = { workspace = true }
toml = { workspace = true }
