[package]
name = "xcasper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
casper-node = { workspace = true }
casper-types = { workspace = true }
const_format = { workspace = true }
duct = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
structopt = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3.5.0"
