[package]
name = "agent-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# casper-types = { path = "../../../casper-node/types" }
# casper-node = { path = "../../../casper-node/node" }
# casper-client = { path = "../../../casper-client-rs" }

duct = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
libc = { workspace = true }
structopt = { workspace = true }
