[package]
name = "agent-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# casper-types = { path = "../../../casper-node/types" }
# casper-node = { path = "../../../casper-node/node" }
# casper-client = { path = "../../../casper-client-rs" }

anyhow = { workspace = true }
duct = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
libc = { workspace = true }

pin-project = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }

structopt = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }

futures = {workspace =true}
