[package]
name = "agent-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# casper-types = { path = "../../../casper-node/types" }
# casper-node = { path = "../../../casper-node/node" }
# casper-client = { path = "../../../casper-client-rs" }

anyhow = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }

pin-project = { workspace = true }
rustls = { workspace = true }

structopt = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tokio-serde = { workspace = true }
rustls-pemfile = { workspace = true }
futures = { workspace =true }
zstd = { workspace = true }
thiserror = { workspace = true }
